--- a/.env
+++ b/.env
@@ -48,7 +48,8 @@ DATABASE_DELETE_MESSAGE=false
 # REDIS
 # ===========================================
 CACHE_REDIS_ENABLED=true
-CACHE_REDIS_URI=redis://localhost:6379
+CACHE_REDIS_URI=redis://redis:6379/6
+
 CACHE_REDIS_PREFIX_KEY=evolution-cache
 CACHE_REDIS_TTL=604800
 CACHE_REDIS_SAVE_INSTANCES=true
