Change CACHE_REDIS_URI to new endpoint
Updated the Redis URI for cache configuration.

--- a/.env
+++ b/.env
@@ -48,7 +48,7 @@ DATABASE_DELETE_MESSAGE=false
 # REDIS
 # ===========================================
 CACHE_REDIS_ENABLED=true
-CACHE_REDIS_URI=redis://redis:6379/6
+CACHE_REDIS_URI=redis://default:BerZtIdFbWlnFmvFiBwKkZOtQMouuIUX@yamanote.proxy.rlwy.net:36771
 
 CACHE_REDIS_PREFIX_KEY=evolution-cache
 CACHE_REDIS_TTL=604800
